--- a/lession 2/forms.html
+++ b/lession 2/forms.html
@@ -6,11 +6,156 @@
 </head>
 <body>
     <!--котейнер для формы -->
-    <form action="#" method="post">
-        <!--групировка тег контайнер -->
-        <fieldset>
+    <form action="#" method="post" enctype="multipart/form-data"> <!--обязательная ввод для форм-->
+        <!--групировка тег контайнер рамка -->
+        <fieldset>  <!-- disable отключение рамки-->
             <legend>Текстовые поля</legend>
+            <p>
+                <label for="1">invite</label>
+                <input id="1" type="text" required><!-- атрибут чтобы форма не отправлялась пока не будет заполнео поле -->
+                <input type="email"><!--вот емайл андреса-->
+                <input type="password" placeholder="Введите пароль"><!-- plfceholder "подсказка для пользователя "поле с символами не обязательно с паролем-->
+                <input type="search" minlength="2" maxlength="9">    <!--  "атрибуты для создание длины для символов" обычное текстовое поле с крестиком для удалениие-->
+                <input type="submit" value="Отправить">
+                <input type="text" value=""><!-- value атрибут значение при необходимости-->
+            </p>
+        </fieldset>
+
+
+        <fieldset>
+            <legend>загрузка файлов</legend>
+            <input type="file" multiple accept="image/*"><!--данный атрибут несколько файлов загрузках "accept Только с атрибутом файл-->
+            <!--<form action="# enctype="multipart/form-data" атрибут для отправки файла...-->
         </fieldset>
     </form>
 </body>
 </html>
+<!--<label for="12"> полузнок<label>
+     <input id="12" type="range" value="6" размер полузнка >
+
+
+             <label> ввод чисел </label>
+             <input type="number"  >  атрибут step="..."
+
+        chekbox
+        <input type="chekbox">
+        2 вариант привязка лабле к интпуту
+        <label>.....<input....>....</label>
+
+        <input type="radio" радио кнопка
+        чек бох и радио кнопка всегда привазывать лабел
+        снять выделение с кнопок только в JS
+
+        Чтобы связать чекбоксы и радиокнопки при нажатие
+        <label><input type="radio"></label>
+        атрибут name=".." указываються одиннаковые значечние только для атрибута radio
+
+        chekbox
+        связываем элименты
+        <input type='chekbox">
+        name атрибут одиннаковый для всех имя , name="grupa[]" в каждои инпуте.
+        категорищески важно для серверов.
+
+        атрибут checked автоматом выбераеться кнопка при загрузки сайта.
+
+
+        fielset необязательный тег
+
+        время и дата не использовать на хтмл а лучше прописовать на js
+        это в хтмл не отображаеться в каждом брузере.
+        <input type="time">время.
+        <input type="date"> дата
+
+        есть вместе дата и время:
+        <input type="datatime-local">
+
+        выбор недели и месяца
+        <input type="month">
+
+        неделя: <input type="week">
+
+        так же для даты и время и недели можно задать минимальное и максемальное значение
+        Min max
+
+        Другие инпуты взятие цвета и скрытое поле
+        <input type="color"> выбор цвета
+        <input type="hidden"> скрытое полеб
+
+        кнопки тег input und button
+        отправка данных формы <input type="submit" value="отправить данные на сервер">
+        кнопка которые позволяет сбросить поля формы <input type="reset" value="Очистить">
+        кнопка без значение но кторыое можно задать в JS чтобы ей польоваться <input type="buttom">
+        кнопка с картинкой <input type="image" src=".."> alt атрибут для текста если картинки не подгрузиться.
+        image кнопка будет тоже отправлять данные как кнопкеа submit .
+
+        атрибуты для всех нпутов кроме кнопок
+        required обязательная заполнение
+        autofocus -
+        disable - без значение , отключает поле, от редактирование  и от копирование данных.
+        readonly - позволяет копирование данных. не рзрешает вставить текст.
+        value - доступ всем инпутом получение значение которые будет водить пользователь в JS.
+        name - дустпен всем полям. Получить доступ к элементам в JS и доступ к полям н а PHP сервере.
+        pattern - регулярное вырожение, водимый текст соотвестый значениям который настроен.
+
+
+      тег  button кнопки
+        тег контейнер открыт /закрыть
+        <button type="submit"> отправка данных на сервер </button>
+        <button type="reset"> очистить данные с полей </button>
+        <button></button> просто кнопка
+        для всех кнопок доступен атрибут name  value для отправки на сервер
+        дополнительные атрибуты чем в инпутах.
+
+
+        Многострочные текстовое поле:
+        <textarea></textarea> тог контейнер,
+        атрибуты: cols-число, колоны
+        rows=число ряды
+        чтобы пользователь не мог тянуть таблицу можно отключитьс помощью стилей.
+        autofocus, required, min,max, placeholder,wrap="hard" und "soft" отправка данных на сервер разница как одна строка,
+        либо будет  переносы, значение off перенос отключен и при длинных слов будет появлаться полоса прокрутки.
+        обычно без этого атрибута.
+
+        Раскрывающие списки
+        Тег
+        <select></select>
+        autofocus , name, disable, required,
+        Для описание списка
+        <option> </option> списки для выбора какого либа элементов...
+        атрибут value для сервера кнопка отправить на сервер, на сервере можно будет получить значение которые заполнено в value  name.
+        selected выбор списка будет выбран по умолчанию при загрузки страницы.
+        Multiple - выбор несколько элементов ддля пользователя.
+        size - число -- сколько отображаеться элементов в списки.
+        label - текст который устоновим будет отображаться в списке <option label ="ddsd"></option>
+        optgroup групирует опшинов
+        <select>
+        <optgroup label="1 gruppa">
+        <option></option>
+        </optgroup>
+        <optgroup label="2gruppa">
+        <option></option>
+        </optgroup>
+        </select>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                    -->
