--- a/html1/sereda/sereda5.html
+++ b/html1/sereda/sereda5.html
@@ -9,7 +9,7 @@
     <link href="seredacss.css" rel="stylesheet">
 </head>
 <body>
-    <form>
+    <form action="#" method="post" enctype="multipart/form-data">
             <fieldset>
                 <div class="email">
                         <label for="1">Введите текст</label>
